# fastapi-render

./: main.py  pyproject.toml  requirements.txt
audio/: fishaudio.py
data/video/: video_guide.json
src/: gemini.py
