[project]
name = "fastapi-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "fish-audio-sdk>=2025.6.3",
    "langchain>=1.0.2",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "mutagen>=1.47.0",
    "python-dotenv>=1.1.1",
    "sox>=1.5.0",
    "uvicorn>=0.38.0",
]
